/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.4.1/userguide/java_library_plugin.html
 */

// Apply the java-library plugin to add support for Java Library
apply plugin: 'java-library'
apply plugin: 'application'

// Configure the main class for the application
application {
    mainClass = 'sl.hackathon.server.Main'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// In this section you declare where to find the dependencies of your project
repositories {
    mavenCentral()
}

dependencies {
    // Lombok - Reduce boilerplate code
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    // JSON serialization - Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'

    // Logging - SLF4J + Logback
    implementation 'org.slf4j:slf4j-api:2.0.5'
    implementation 'ch.qos.logback:logback-classic:1.5.13'
    implementation 'ch.qos.logback:logback-core:1.5.19'

    // Jakarta WebSocket API (Jakarta EE 10)
    implementation 'jakarta.websocket:jakarta.websocket-api:2.1.1'
    
    // Tyrus WebSocket Server (Jakarta WebSocket implementation)
    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client-jdk:2.1.5'
    implementation 'org.glassfish.tyrus:tyrus-server:2.1.5'
    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-server:2.1.5'

    // Testing - JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'

    // Mocking - Mockito (compatible with Java 11)
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
}

test {
    useJUnitPlatform()
}

